# hub-starter-subscription-airdrops

./: codegen.ts  holaplex.graphql  next.config.js  package-lock.json  package.json  render.yaml  schema.graphql  tailwind.config.js
.github/worfklows/: release.yml
.github/workflows/: release.yml
@types/: graphql.d.ts
prisma/: schema.prisma
prisma/migrations/20230605124004_/: migration.sql
prisma/migrations/20230605140306_/: migration.sql
prisma/migrations/20230606074851_/: migration.sql
scripts/: airdrop.ts  package.json
scripts/airdrop/: .gitignore  Cargo.toml  holaplex.graphql
scripts/airdrop/queries/: get_drops.graphql  mint_edition.graphql
scripts/airdrop/src/: airdrop.rs  client.rs  db.rs  main.rs  prelude.rs  subscription.rs  user.rs  wallet.rs
src/: graphql.types.ts
src/app/: App.tsx  Home.tsx  layout.tsx  page.tsx
src/app/(home)/: Drips.tsx  Home.tsx  layout.tsx  page.tsx
src/app/(home)/collectibles/: page.tsx
src/app/(loggedin)/: layout.tsx  page.tsx
src/app/(loggedin)/drips/: page.tsx
src/app/(main)/: Airdrops.tsx  Drips.tsx  layout.tsx
src/app/(main)/airdrops/: page.tsx
src/app/(main)/drips/: page.tsx
src/app/collectibles/: page.tsx
src/app/login/: Login.tsx  page.tsx
src/components/: Hero.tsx  Icon.tsx
src/layouts/: Tabs.tsx
src/mutations/: subscription.graphql
src/pages/api/: graphql.ts
src/queries/: airdrops.graphql  collectibles.graphql  customer.graphql  drop.graphql  project.graphql  subscription.graphql
