[package]
name = "airdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql_client = "0.12.0"
serde = { version = "1.0.67", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["postgres"] }


[dependencies.async-std]
version = "1"
features = ["attributes"]