[package]
name = "airdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql_client = { version = "0.13.0", features = ["full"] }
serde = { version = "1.0.67", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "chrono"] }
